# chat-ai

./: .env  .gitmodules  Dockerfile  docker-compose.yml  main.py  pyproject.toml  teste-rag.py
ai-chatbot-backend/: Dockerfile
ai-chatbot-backend/services/: rag_service.py
chatbot-backend/: SCRIPT.py
chatbot-backend/contollers/: chat_controller.py
chatbot-backend/routes/: chat_route.py
chatbot-backend/services/: chat_service.py
contollers/: chat_controller.py
graphs/: build.py  state.py
routes/: chat_route.py
services/: chat_service.py  rag_service.py
